# duckies

./: COMPLIANCE.md  README.md  license.txt  pyproject.toml
duckies/: api.py  hooks.py  install.py  modules.txt  smoke_test.py
duckies/duckies/doctype/cafe_event/: cafe_event.json  cafe_event.py
duckies/duckies/doctype/cafe_space/: cafe_space.json  cafe_space.py
duckies/duckies/doctype/duckies_settings/: duckies_settings.json  duckies_settings.py
duckies/duckies/doctype/event_booking/: event_booking.json  event_booking.py
duckies/duckies/doctype/event_template/: event_template.json  event_template.py
duckies/duckies/doctype/recharge_offer/: recharge_offer.json  recharge_offer.py
duckies/duckies/doctype/recharge_request/: recharge_request.js  recharge_request.json  recharge_request.py
duckies/duckies/doctype/wallet_refund_request/: wallet_refund_request.json  wallet_refund_request.py
duckies/duckies/doctype/wallet_transaction/: wallet_transaction.json  wallet_transaction.py
duckies/events/: api.py  tasks.py
duckies/payments/: razorpay.py
duckies/wallet/: api.py  expiry.py  si_hooks.py
