[project]
name = "duckies"
authors = [{ name = "Duckie's Sports Cafe", email = "dev@duckies.example" }]
description = "Prepaid wallet, spaces, events & bookings for Duckie's Sports Cafe (Frappe/ERPNext app)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
